<resources>
    <string name="app_name">pagerGallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="bnv_base">首页</string>
    <string name="bnv_mine">我的</string>

    <string name="text_search">搜索</string>
    <string name="delete_history">删除历史记录</string>
    <string name="tv_back">返回上一页</string>

    <string name="account">ID:</string>
    <string name="tv_setting">设置</string>
    <string name="text_download">下载</string>
    <string name="text_collection">收藏</string>
    <string name="text_history">历史记录</string>
    <string name="user_photo">头像</string>

    <string name="notice">该功能未完善，敬请期待</string>

    <string name="pic_count">%1$d/%2$d</string>
</resources>