<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    android:orientation="vertical"
    tools:context=".fragment.me.MineFragment">

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/loginButtonCompose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mine_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:background="@color/teal_700">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/user_photo"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-5dp"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/photo"
            app:layout_constraintTop_toTopOf="@+id/photo" />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/account"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_accountID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@+id/tv_account"
            app:layout_constraintStart_toEndOf="@+id/tv_account"
            app:layout_constraintTop_toTopOf="@+id/tv_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_right_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_download"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:drawablePadding="9dp"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        android:paddingEnd="8dp"
        android:text="@string/text_download"
        app:drawableLeftCompat="@drawable/ic_download"
        app:drawableRightCompat="@drawable/ic_right_24" />

    <TextView
        android:id="@+id/tvCollect"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:drawablePadding="9dp"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        android:paddingEnd="8dp"
        android:text="@string/text_collection"
        app:drawableLeftCompat="@drawable/ic_baseline_star_border_24"
        app:drawableRightCompat="@drawable/ic_right_24" />

    <TextView
        android:id="@+id/tv_history"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:drawablePadding="9dp"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        android:paddingEnd="8dp"
        android:text="@string/text_history"
        app:drawableLeftCompat="@drawable/ic_history_24"
        app:drawableRightCompat="@drawable/ic_right_24" />

    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:drawablePadding="9dp"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        android:paddingEnd="8dp"
        android:text="@string/tv_setting"
        app:drawableLeftCompat="@drawable/ic_settings_24"
        app:drawableRightCompat="@drawable/ic_right_24" />


</LinearLayout>